Alteração application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/candidatodebolso?useSSL
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://mysql:3306/db_candidatodebolso
+spring.datasource.username=welson
+spring.datasource.password=welson
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.hbm2ddl.import_files=initialAdmin.sql
