--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://mysql:3306/db_candidatodebolso
+spring.datasource.url=jdbc:mysql://mysql:3306/db_candidatodebolso?useSSL=false
 spring.datasource.username=welson
 spring.datasource.password=welson
 spring.datasource.tomcat.test-while-idle=true
